--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,10 +1,12 @@
 plugins {
     id 'com.android.application'
     id 'kotlin-android'
+    id 'kotlin-android-extensions'
 }
 
 android {
     compileSdkVersion 30
+    apply plugin: "androidx.navigation.safeargs.kotlin"
 
     defaultConfig {
         applicationId "com.joseph18.ifubaya.advweek4"
